--- a/fonts.css
+++ b/fonts.css
@@ -3,7 +3,7 @@
       src:  url('/fonts/anakotmai-light.eot');
       src:  url('/fonts/anakotmai-light.eot?#iefix') format('embedded-opentype'),
             url('/fonts/anakotmai-light.woff2') format('woff2'),
-            url('/fonts/anakotmai-light.woff') format('woff'),
+            url('/fonts/anakotmai-light.woff') format('woff');
    font-weight: 200;
    font-style: 200;
 }
@@ -12,7 +12,7 @@
       src:  url('/fonts/anakotmai-medium.eot');
       src:  url('/fonts/anakotmai-medium.eot?#iefix') format('embedded-opentype'),
             url('/fonts/anakotmai-medium.woff2') format('woff2'),
-            url('/fonts/anakotmai-medium.woff') format('woff'),
+            url('/fonts/anakotmai-medium.woff') format('woff');
    font-weight: 300;
    font-style: 300;
 }
@@ -21,7 +21,7 @@
       src:  url('/fonts/anakotmai-bold.eot');
       src:  url('/fonts/anakotmai-bold.eot?#iefix') format('embedded-opentype'),
             url('/fonts/anakotmai-bold.woff2') format('woff2'),
-            url('/fonts/anakotmai-bold.woff') format('woff'),
+            url('/fonts/anakotmai-bold.woff') format('woff');
    font-weight: 400;
    font-style: 400;
 }
